# grems

./: .gitignore  Cargo.toml  How to USE.txt  LICENSE  config.json
shader/: blit.wgsl  vertex.wgsl  x_blit.wgsl  xyz_blit.wgsl  xyz_norm_blit.wgsl  xyz_norm_x100_blit.wgsl  y_blit.wgsl  z_blit.wgsl  z_blit_x100.wgsl
shader/fdtd/: excitation-mode.wgsl  excitation-volume.wgsl  fdtd-3d-cache.wgsl  fdtd-3d.wgsl  pml_corner_field.wgsl  pml_corner_psi.wgsl  pml_edge_x_field.wgsl  pml_edge_x_psi.wgsl  pml_edge_y_field.wgsl  pml_edge_y_psi.wgsl  pml_edge_z_field.wgsl  pml_edge_z_psi.wgsl  pml_surface_x_field.wgsl  pml_surface_x_psi.wgsl  pml_surface_y_field.wgsl  pml_surface_y_psi.wgsl  pml_surface_z_field.wgsl  pml_surface_z_psi.wgsl
src/: interpolator.rs  main.rs
src/fdtd/: mod.rs  pml.rs
src/shader/: blit.wgsl
src/shader/rasterize/: rasterizer.wgsl
